# secp256k1-haskell

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  hie.yaml  package.yaml  secp256k1-haskell.cabal  secp256k1.cabal  stack.yaml
scripts/: format
secp256k1-haskell/: CHANGELOG.md  package.yaml  secp256k1-haskell.cabal
secp256k1-haskell-recovery/: CHANGELOG.md  package.yaml  secp256k1-haskell-recovery.cabal
secp256k1-haskell-recovery/src/Crypto/Secp256k1/: Recovery.hs
secp256k1-haskell-recovery/src/Crypto/Secp256k1/Internal/: Recovery.hs  RecoveryOps.hs
secp256k1-haskell-recovery/test/Crypto/Secp256k1/: RecoverySpec.hs
secp256k1-haskell/src/Crypto/: Secp256k1.hs
secp256k1-haskell/src/Crypto/Secp256k1/Internal/: Base.hs  BaseOps.hs  Context.hs  ForeignTypes.hs  Util.hs
secp256k1-haskell/test/Crypto/: Secp256k1Spec.hs
secp256k1-haskell/test/Crypto/Secp256k1/: InternalSpec.hs
src/Crypto/: Secp256k1.hs
src/Crypto/Secp256k1/: Internal.hs
test/: Spec.hs
test/Crypto/: Secp256k1Spec.hs
test/Crypto/Secp256k1/: InternalSpec.hs  Tests.hs
test/Crypto/Secp256k1/Internal/: Tests.hs
